0.2.2 - fix phone number regex to check whole string
      - made ? predicates really return false or true
      - fixed examples in readme
      - added tests

0.2.1 - added looks-like-phone?

0.2.0 - API Change: predicates in pretzel.strings now should have the
        string argument last.

0.1.0 - initial releas